[project]
name = "firecache"
version = "0.0.1"
description = ""
authors = [
    {name = "Hamad",email = "60110135+HAlafeefi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "firecache"}]